--- a/server/env.example
+++ b/server/env.example
@@ -6,7 +6,7 @@ SUPABASE_URL=your_supabase_url_here
 SUPABASE_SERVICE_KEY=your_supabase_service_key_here
 
 # Gorbagana Blockchain Configuration
-GORBAGANA_RPC_URL=https://gorchain.wstf.io
+GORBAGANA_RPC_URL=https://rpc.gorbagana.wtf
 TRASH_CAN_ADDRESS=your_trash_can_wallet_address_here
 
 # CORS Configuration (Frontend URL)
