--- a/server/package.json
+++ b/server/package.json
@@ -25,7 +25,7 @@
     "winston": "^3.10.0",
     "winston-daily-rotate-file": "^4.7.1",
     "bs58": "^5.0.0",
-    "@gorbagana/web3.js": "^1.0.1"
+    "@gorbagana/web3.js": "file:../gorba-gluttons/node_modules/@gorbagana/web3.js"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
