--- a/.gitignore
+++ b/.gitignore
@@ -38,5 +38,8 @@ yarn-error.log*
 coverage/
 .nyc_output/ 
 
-# Keys
-keys
+# Keys and secrets
+keys/
+server/keys/
+server/keys/*.json
+race_treasury.json
